# backend/internal/domain/account/account.router.go
@@ -1,0 +1,34 @@
+package account
+
+import (
+	"github.com/KaranMali2001/finance-tracker-v2-backend/internal/database/generated"
+	"github.com/KaranMali2001/finance-tracker-v2-backend/internal/middleware"
+	"github.com/KaranMali2001/finance-tracker-v2-backend/internal/server"
+	"github.com/labstack/echo/v4"
+)
+
+type Module struct {
+	handler *AccHandler
+}
+type Deps struct {
+	Server  *server.Server
+	Queries *generated.Queries
+}
+
+func NewAccountModule(deps Deps) *Module {
+	repo := NewAccRepo(deps.Server, deps.Queries)
+	service := NewAccountService(deps.Server, repo)
+	handler := NewAccountHandler(deps.Server, service)
+
+	return &Module{
+		handler: handler,
+	}
+}
+func (m *Module) RegisterRoutes(e *echo.Echo) {
+
+	authMiddleware := middleware.NewAuthMiddleware(m.handler.server).RequireAuth
+	e.POST("/api/v1/account", m.handler.CreateAccount, authMiddleware)
+	e.GET("/api/v1/account/:account_id", m.handler.GetAccountById, authMiddleware)
+	e.GET("/api/v1/account", m.handler.GetAccountByUserId, authMiddleware)
+	e.PUT("/api/v1/account", m.handler.UpdateAccount, authMiddleware)
+}
